--- a/.github/workflows/sitemap-gen.yml
+++ b/.github/workflows/sitemap-gen.yml
@@ -18,7 +18,7 @@ jobs:
         id: sitemap
         uses: cicirello/generate-sitemap@v1
         with:
-          base-url-path: https://bamgoesn.github.io/test-mdbook-sitemap
+          base-url-path: https://bamgoesn.github.io/test-mdbook-sitemap/
 
       - name: Output stats
         run: |
